# Neon_CRM_SDK

./: .bandit  .bumpversion.cfg  .flake8  .gitattributes  .gitignore  .nbstripout_config  .pre-commit-config.yaml  .secrets.baseline  .swagger-mcp  ADVANCED_CUSTOM_FIELDS_EXAMPLE.md  CHANGELOG.md  CICD_SETUP.md  CLAUDE_DEVELOPMENT_NOTES.md  CSV_REPORT_INTERPRETATION_GUIDE.md  CUSTOM_FIELD_ENHANCEMENT_EXAMPLE.md  CUSTOM_FIELD_ENHANCEMENT_SUMMARY.md  GOVERNANCE.md  LICENSE  MANIFEST.in  MULTIVALUE_FIELD_EXAMPLE.md  Makefile  NOTEBOOK_SECURITY.md  README.md  RESOURCE_REVIEW_CHECKLIST.md  TESTING.md  VERSION_MANAGEMENT.md  codecov.yml  demo_swagger_mcp.js  fix_field_names.py  justfile  mkdocs.yml  neon-api-v2.10.yaml  pyproject.toml  test_notebooks_execution.py  use_swagger_mcp.js
.claude/: CLAUDE_SYSTEM_PROMPT.md
.github/: SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml  version-bump.yml
analysis/: account_search_test.py  adaptive_feature_engineering.py  all_columns_data_collection.py  campaign_performance_analysis.ipynb  campaign_performance_analysis.ipynb.backup  corrected_data_collection.py  corrected_feature_engineering.py  corrected_notebook_cell.py  donor_lifecycle_analysis.ipynb  donor_propensity_analysis.ipynb  donor_segmentation_growth_analysis.ipynb  executive_comprehensive_dashboard.ipynb  membership_trends_analysis.ipynb  minimal_data_collection.py  simple_api_diagnostic.py  simple_field_check.py  volunteer_engagement_analysis.ipynb
docs/: changelog.md  contributing.md  examples.md  fast_migration_discovery.md  field_name_standards.md  field_name_updates.md  getting-started.md  governance_in_notebooks.md  index.md  migration_performance_optimization.md  migration_plan_export_import.md  permissions.md  profiles.md  requirements.txt
docs/api/: capabilities.json  capabilities.yaml  client.md  exceptions.md  field_discovery.yaml  interactive.md  openapi.yaml  resource_metadata.json  schemas.json  types.json  types.md
docs/api/resources/: accounts.md  (+4 more)
docs/examples/: basic.md  custom-fields.md  migrations.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/user-guide/: advanced-usage.md  basic-usage.md  caching.md  custom-fields.md  error-handling.md  logging.md  migrations.md  search.md
examples/: account_creation.ipynb  account_creation.py  account_retrieval.ipynb  account_retrieval.py  address_management.ipynb  address_management.py  basic_usage.ipynb  basic_usage.py  batch_operations_performance.ipynb  comprehensive_accounts_crud.ipynb  comprehensive_donations_crud.ipynb  custom_field_updates_comprehensive.ipynb  custom_fields_example.ipynb  custom_fields_example.py  custom_fields_management.ipynb  donations_examples.ipynb  events_management.ipynb  governance_config.json  governance_example.py  governance_examples.ipynb  pagination_examples.ipynb  pagination_examples.py  search_fields.ipynb
src/neon_crm/: FIELD_DEFINITIONS_README.md  __init__.py  cache.py  client.py  config.py  custom_field_manager.py  custom_field_processors.py  custom_field_types.py  custom_field_validation.py  exceptions.py  field_definitions.json  field_mapping.py  fuzzy_search.py  logging.py  migration_tools.py  types.py  validation.py
tests/: __init__.py  conftest.py  test_client.py
tests/regression/: README.md  __init__.py  test_client_error_handling.py  test_readonly.py  test_writeops.py
tests/unit/: __init__.py  test_accounts_resource_comprehensive.py  test_accounts_validation.py  test_base_resource.py  test_base_resource_comprehensive.py  test_cache.py  test_client_comprehensive.py  test_client_config_integration.py  test_config.py  test_custom_fields.py  test_exceptions.py  test_field_mapping.py  test_fuzzy_search.py  test_governance_permissions.py  test_logging.py  test_rate_limiting.py  test_resources.py  test_types.py  test_validation.py  test_validation_comprehensive.py
tools/: MIGRATION_COMPARISON.md  fast_migration_discovery.py  generate_schemas.py  mapping_validator_test.py  migrate_v_columns_simplified.ipynb  migration_performance_tester.py  migration_plan_manager.py  universal_field_test.py  validate_openapi.py
(+62 files in other folders)
